# basic-reasoning-agent-local-llm-with-streamlit-ui

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.yaml  main.py  pyproject.toml  utils.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
agents/: reflection_agent.py  search_agent.py  web_fetcher.py
prompts/: search_prompts.py
tests/: test_agents.py  test_utils.py
